# mcp-code-execution-enhanced

./: .dockerignore  .gitignore  AGENTS.md.template  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  discovery_config.example.json  mcp_config.example.json  mcp_config.json  mcp_config.sandbox.example.json  pyproject.toml
.claude/: INTEGRATION.md
.claude/skills/: README.md
.claude/skills/multi-tool-pipeline/: SKILL.md  workflow.py
.claude/skills/simple-fetch/: SKILL.md  workflow.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  CONFIGURATION.md  OTHER_FRAMEWORKS.md  TRANSPORTS.md  USAGE.md  pydantic-usage.md  type-safety.md
examples/: README.md  example_progressive_disclosure.py  example_sandbox_simple.py  example_sandbox_usage.py  example_tool_chaining.py
scripts/: README.md  multi_tool_pipeline.py
skills/: README.md  SKILLS.md  simple_fetch.py
src/mcp_execution/: __init__.py
src/prompts/: generate_test_params.txt
src/runtime/: config.py  discover_schemas.py  exceptions.py  generate_test_params.py  generate_wrappers.py  harness.py  mcp_client.py  normalize_fields.py  schema_inference.py  schema_utils.py
src/runtime/sandbox/: __init__.py  container.py  exceptions.py  security.py
tests/integration/: conftest.py  test_fetch_server.py  test_git_server.py  test_harness_integration.py  test_sandbox_execution.py  test_sandbox_mcp_integration.py
tests/unit/: test_discover_schemas_mock.py  test_generate_test_params.py  test_generate_wrappers.py  test_mcp_client.py  test_normalize_fields.py  test_sandbox_security.py  test_schema_inference.py
